[package]
name = "antismash-db"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
axum = { version = "0.6", features = ["macros"] }
chrono = { version = "0.4.26", features = ["serde"] }
clap = { version = "4.3.21", features = ["derive"] }
dotenvy = "0.15.7"
gethostname = "0.4.3"
git-version = "0.3.8"
nom = "7.1.3"
regex = "1.9.4"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.105", features = ["preserve_order", "raw_value"] }
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "json",
    "macros",
] }
strum = { version = "0.25", features = ["derive"] }
thiserror = "1"
tokio = { version = "1.31.0", features = ["full"] }
tower-http = { version = "0.4.3", features = ["fs", "cors"] }
uuid = { version = "1.4.1", features = ["v4", "serde", "fast-rng"] }
zip = "0.6.6"
